--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,27 +1,30 @@
-header{
+header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-around;
-    width: 100%;
     height: 60px;
-    background-color: #000000;
+    background-color: black;
+    padding: 0 20px;
 }
 
-.logo{
+.logo, .favoritos {
     text-decoration: none;
-    font-size: 30px;
-    cursor: pointer;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.logo {
+    font-size: 24px;
     color: #fff;
-    font-weight: bold;
 }
 
-.favoritos{
-    text-decoration: none;
-    cursor: pointer;
+.favoritos {
+    color: #333;
     background-color: #fff;
-    color: #000000;
-    font-weight: bold;
-    border-radius: 2px;
- 
+}
 
+.favoritos:hover {
+    background-color: #ddd;
 }
