--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,14 +1,14 @@
 .lista-filmes {
     max-width: 800px;
     margin: 14px auto;
+ 
 }
 
 .lista-filmes article {
     width: 100%;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);  
     padding: 15px;
-    border-radius: 4px;
-}
+ }
 
 .lista-filmes strong{
     margin-bottom: 14px;
@@ -48,4 +48,14 @@
     align-items: center;
     margin-top: 14px;
 
+}
+
+.container {
+    background-image: url('https://i.pinimg.com/originals/55/13/7f/55137f79f2c81426f1de13f244771e7c.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    max-width: 100%;
+    height: 100vh;  
+    overflow-y: auto;  
 }
